# C-17test

./: CMakeLists.txt  README.md  new_any.cpp  new_container.cpp  new_createdir.cpp  new_discard.cpp  new_filesystem.cpp  new_if.cpp  new_inline.cpp  new_lambda.cpp  new_lock.cpp  new_openmp.cpp  new_openmp1.cpp  new_openmp2.cpp  new_optional.cpp  new_other.cpp  new_stlpar.cpp  new_stringview.cpp  new_struct.cpp  new_template.cpp  new_test.cpp  new_tuple.cpp  new_variant.cpp  xx.cpp
